--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cse341",
-  "version": "1.0.0",
-  "description": "",
+  "name": "cse341_project01",
+  "version": "0.0.1",
+  "description": "CSE 341 Project 01",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -11,17 +11,17 @@
     "format": "prettier --write"
   },
   "keywords": [],
-  "author": "",
+  "author": "viktorfrosty",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.7",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.12.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "eslint": "^9.17.0",
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.14.0",
