--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cse341_project01",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "CSE 341 Project 01",
   "main": "server.js",
   "scripts": {
@@ -17,7 +17,8 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.12.0"
+    "mongodb": "^6.12.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
@@ -26,7 +27,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.14.0",
     "nodemon": "^3.1.9",
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "swagger-autogen": "^2.23.7"
   },
   "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
 }
